objects/tffa__QuestionnaireMatrix__c.object
<CustomObject>
    <description>Represents business rules for resolving questionnaires. A questionnaire is a collection of dynamic questions relevant to a use case. e.g. Eligibility, Expected Activity, Declaration, etc. Depending on the questionnaire resolved for a use case, the information captured may differ.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state and questionnaire active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Questionnaire__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AddressStateSet__c</fullName>
        <description>A set of states (geographical region of a country) used as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Address State (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>Unique code of brands servicing the submission. A fact. Supports multiple values (semicolon separated begin)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCodeSet__c</fullName>
        <description>Unique product bundle code maintained in the system as a fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;BUNDLECHECKING;</inlineHelpText>
        <label>Bundle code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>Created Channel</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CitizenshipSet__c</fullName>
        <description>Citizenship of associated party. Supports multiple values. A fact.</description>
        <label>Citizenship (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Citizenship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Champion/Challenger strategy to which this record belongs. Used in Champion/Challenger testing.</description>
        <label>Decision Strategy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Strategies configured for Questionnaire Matrix can only be selected.</errorMessage>
            <filterItems>
                <field>tffa__DecisionStrategy__c.tffa__Configuration__r.tffa__EntityType__c</field>
                <operation>equals</operation>
                <value>QuestionnaireMatrix</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Questionnaire Matrices</relationshipLabel>
        <relationshipName>QuestionnaireMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EventName__c</fullName>
        <description>Event or purpose of capture of a questionnaire</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCodeSet__c</fullName>
        <description>Unique code of location (branch) servicing the submission. A fact. Supports multiple values (semicolon separated)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual values with semicolon ;123;</inlineHelpText>
        <label>Location code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationTypeSet__c</fullName>
        <description>Organization type of associated party. Supports multiple values. A fact.</description>
        <label>Organization Type (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application. Represents a fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyType__c</fullName>
        <description>Type of Party</description>
        <label>Party type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategorySet__c</fullName>
        <description>Product category of associated application. A fact. Supports multiple values.</description>
        <label>Product category (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCodeSet__c</fullName>
        <description>The product code of the application. Supports multiple (semicolon separated). A fact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;P-01;P-02;</inlineHelpText>
        <label>Product code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductSegmentSet__c</fullName>
        <description>Restricts rule to specific product segments. Supports multiple values. A fact.</description>
        <label>Product segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product as a fact. Used for resolving a questionnaire specific to a product.</description>
        <label>Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Questionnaire Matrices</relationshipLabel>
        <relationshipName>QuestionnaireMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Questionnaire__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Outcome</description>
        <label>Questionnaire</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Questionnaire of same type should be selected</errorMessage>
            <filterItems>
                <field>tffa__Questionnaire__c.tffa__Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Questionnaire__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of questionnaires.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of questionnaire.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__QuestionnaireType</valueSetName>
        </valueSet>
    </fields>
    <label>Questionnaire Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__Type__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__CDD</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyType__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>CDD</value>
        </filters>
        <label>CDD</label>
    </listViews>
    <listViews>
        <fullName>tffa__Declaration</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__PartyType__c</columns>
        <columns>tffa__Channel__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>DECLARATION</value>
        </filters>
        <label>Declaration</label>
    </listViews>
    <listViews>
        <fullName>tffa__Eligibility</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Channel__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>ELIGIBILITY</value>
        </filters>
        <label>Eligibility</label>
    </listViews>
    <listViews>
        <fullName>tffa__ExpectedActivity</fullName>
        <columns>NAME</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__ProductCategorySet__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Channel__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>EXPECTED_ACTIVITY</value>
        </filters>
        <label>Expected Activity</label>
    </listViews>
    <listViews>
        <fullName>tffa__FinancialNeed</fullName>
        <columns>NAME</columns>
        <columns>tffa__DecisionStrategy__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <columns>tffa__Channel__c</columns>
        <columns>tffa__ProductSegmentSet__c</columns>
        <columns>tffa__Questionnaire__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>FINANCIAL_NEED</value>
        </filters>
        <label>Financial Need</label>
    </listViews>
    <nameField>
        <displayFormat>QM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__DecisionStrategy</fullName>
        <active>true</active>
        <description>Applies validations around DecisionStrategy field
1.  entityPurpose of strategy must match type</description>
        <errorConditionFormula>NOT(ISBLANK(tffa__DecisionStrategy__c)) &amp;&amp; TEXT(tffa__DecisionStrategy__r.tffa__Configuration__r.tffa__EntityPurpose__c) &lt;&gt; TEXT(tffa__Type__c)</errorConditionFormula>
        <errorDisplayField>tffa__DecisionStrategy__c</errorDisplayField>
        <errorMessage>Decision Strategy purpose must match the Questionnaire Matrix type.</errorMessage>
    </validationRules>
</CustomObject>